--- a/Proje_OOP/Views/Customer/Index.cshtml
+++ b/Proje_OOP/Views/Customer/Index.cshtml
@@ -5,5 +5,26 @@
     Layout = "~/Views/Shared/_CoreLayout.cshtml";
 }
 
-<h1>Index</h1>
+<h1>Müşteri Listesi</h1>
+
+<table class="table table-bordered">
+    <tr>
+        <th>#</th>
+        <th>Müşteri Adı</th>
+        <th>Şehir</th>
+        <th>Sil</th>
+        <th>Güncelle</th>
+    </tr>
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>@item.CustomerID</td>
+            <td>@item.CustomerName</td>
+            <td>@item.CustomerCity</td>
+            <td><a href="/Customer/DeleteCustomer/@item.CustomerID" class="btn btn-danger">Sil</a></td>
+            <td><a href="/Customer/UpdateCustomer/@item.CustomerID" class="btn btn-success">Güncelle</a></td>
+        </tr>
+    }
+</table>
+<a href="/Customer/AddCustomer/" class="btn btn-primary">Yeni Müşteri Girişi</a>
 
